k8s/apps/miniflux/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniflux
spec:
  template:
    spec:
      containers:
        - name: app
          image: miniflux-debug
          env: []
          envFrom: []
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
