k8s/apps/miniflux/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: miniflux
spec:
  ports:
    - port: 80
      targetPort: 8080
