k8s/apps/miniflux/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miniflux
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
      - miniflux
  defaultBackend:
    service:
      name: miniflux
      port:
        number: 80
